--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node build/index.js",
-    "dev": "ts-node ./src/index.ts"
+    "dev": "ts-node -r dotenv/config ./src/index.ts"
   },
   "keywords": [],
   "author": "codinglab",
@@ -15,6 +15,7 @@
     "env-var": "^7.1.1"
   },
   "devDependencies": {
+    "dotenv": "^16.0.0",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
   }
