--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "env-var": "^7.1.1"
   },
   "devDependencies": {
+    "prettier": "^2.6.2",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
   }
