--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "scripts": {
     "build": "tsc",
     "start": "node build/index.js",
-    "dev": "ts-node ./src/index.ts"
+    "dev": "ts-node -r dotenv/config ./src/index.ts"
   },
   "keywords": [],
   "author": "codinglab",
   "license": "MIT",
   "dependencies": {
+    "@discordjs/voice": "^0.9.0",
     "discord.js": "^13.6.0",
-    "env-var": "^7.1.1"
+    "env-var": "^7.1.1",
+    "libsodium-wrappers": "^0.7.10"
   },
   "devDependencies": {
+    "dotenv": "^16.0.0",
     "prettier": "^2.6.2",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
